--- a/code.ipynb
+++ b/code.ipynb
@@ -17,8 +17,7 @@
     "import pandas as pd\n",
     "from sklearn import linear_model\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "from sklearn.metrics import mean_absolute_error, r2_score"
+    "import seaborn as sns\n"
    ]
   },
   {
